<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Map">

    <ImageButton
        android:id="@+id/img_btn_4"
        android:layout_width="411dp"
        android:layout_height="557dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/map" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/smt_6"
        android:textColor="@color/purple_700"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/stmt_5"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView22"
        app:layout_constraintEnd_toStartOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:text="@string/loc"
        android:textColor="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView19"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="31dp"
        android:layout_height="27dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="41dp"
        app:layout_constraintBottom_toTopOf="@+id/img_btn_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:srcCompat="@drawable/blue" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="16dp"
        android:layout_height="31dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="37dp"
        android:text="@string/stmt_6"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/img_btn_4"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="18dp"
        android:text="@string/stmt_8"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView21"
        app:layout_constraintEnd_toStartOf="@+id/textView19"
        app:layout_constraintStart_toEndOf="@+id/textView21" />

    <ImageButton
        android:id="@+id/img_btn_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/img_btn_3"
        app:layout_constraintTop_toTopOf="@+id/img_btn_4"
        app:layout_constraintVertical_bias="0.247"
        app:srcCompat="@drawable/re"
        tools:layout_editor_absoluteX="331dp" />

    <ImageButton
        android:id="@+id/img_btn_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_btn_4"
        app:layout_constraintVertical_bias="0.742"
        app:srcCompat="@drawable/yel"
        tools:layout_editor_absoluteX="275dp" />

    <ImageButton
        android:id="@+id/img_btn_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        app:layout_constraintBottom_toTopOf="@+id/img_btn_5"
        app:layout_constraintStart_toStartOf="@+id/img_btn_4"
        app:layout_constraintTop_toBottomOf="@+id/img_btn_6"
        app:layout_constraintVertical_bias="0.399"
        app:srcCompat="@drawable/gre" />

    <ImageButton
        android:id="@+id/img_btn_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_btn_4"
        app:layout_constraintVertical_bias="0.036"
        app:srcCompat="@drawable/re"
        tools:layout_editor_absoluteX="56dp" />

    <ImageButton
        android:id="@+id/img_btn_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/img_btn_4"
        app:layout_constraintTop_toBottomOf="@+id/img_btn_6"
        app:layout_constraintVertical_bias="0.883"
        app:srcCompat="@drawable/yel"
        tools:layout_editor_absoluteX="40dp" />

</androidx.constraintlayout.widget.ConstraintLayout>